--- a/app/app.html
+++ b/app/app.html
@@ -13,108 +13,119 @@
 </head>
 <body>
     <div id="app" class="headlinr">
-        <div class="headlinr-nav">
-            <h1>headlinr</h1>
+        <div class="start" v-if="state.start">
+
         </div>
-        <div class="headlinr-score-tracker">
-            <div class="likes-score">
-                <div class="tracker">
-                    <div class="progress" v-bind:style="{width: (user.score.likes/user.score.likesReq) * 100 + '%'}"></div>
-                </div>
-                <h6 class="darkGray">{{user.score.likes}} of {{user.score.likesReq}}</h6> 
-                <h6>likes</h6>
+        <div class="game" v-if="state.game">
+            <div class="headlinr-nav">
+                <h1>headlinr</h1>
             </div>
-            <div class="comments-score">
-                <div class="tracker">
-                    <div class="progress" v-bind:style="{width: (user.score.comments/user.score.commentsReq) * 100 + '%'}"></div>
-                </div>
-                <h6 class="darkGray">{{user.score.comments}} of {{user.score.commentsReq}}</h6>
-                <h6>comments</h6>
-            </div>
-            <div class="users-core">
-                <div class="tracker">
-                    <div class="progress" v-bind:style="{width: (user.score.users/user.score.usersReq) * 100 + '%'}"></div>
-                </div>
-                <h6 class="darkGray">{{user.score.users}} of {{user.score.usersReq}}</h6> 
-                <h6>positive users</h6>
-            </div>
-        </div>
-        <div class="column left">
-            <h2>Connections</h2>
-            <div class="connections-panel">
-                <div class="connection" v-for="user in game.users">
-                    <div class="info">
-                        <div class="thumbnail">
-                            <img class="portrait" v-bind:src="resolvePic(user.info.pic)" alt="Image">
-                        </div>
-                        <p class="mediumGray">{{user.info.first}} {{user.info.last}}</p>
+            <div class="headlinr-score-tracker">
+                <div class="likes-score">
+                    <div class="tracker">
+                        <div class="progress" v-bind:style="{width: (user.score.likes/user.score.likesReq) * 100 + '%'}"></div>
                     </div>
-                    <div class="feelings-container">
-                        <div class="feelings" v-bind:style="{ width: user.playerOpinion + '%' }"></div>
+                    <h6 class="darkGray">{{user.score.likes}} of {{user.score.likesReq}}</h6> 
+                    <h6>likes</h6>
+                </div>
+                <div class="comments-score">
+                    <div class="tracker">
+                        <div class="progress" v-bind:style="{width: (user.score.comments/user.score.commentsReq) * 100 + '%'}"></div>
                     </div>
+                    <h6 class="darkGray">{{user.score.comments}} of {{user.score.commentsReq}}</h6>
+                    <h6>comments</h6>
+                </div>
+                <div class="users-core">
+                    <div class="tracker">
+                        <div class="progress" v-bind:style="{width: (user.score.users/user.score.usersReq) * 100 + '%'}"></div>
+                    </div>
+                    <h6 class="darkGray">{{user.score.users}} of {{user.score.usersReq}}</h6> 
+                    <h6>positive users</h6>
                 </div>
             </div>
-        </div>
-        <div class="column middle">
-            <div class="userInput">
-                <input type="text" placeholder="Post a headline" v-on:click="pause = true" v-model="user.headline" v-on:keyup.enter="submitHeadline"></input>
-                <div class="submitHeadline" v-on:click="submitHeadline">
-                    <h5>Add Headline</h5>
-                </div>
-            </div>
-            <transition-group name="headline-add" tag="div">
-                <div class="post headline-add-item" v-if="game.headlines" v-for="(item, i) in game.headlines" v-bind:key="item">
-                    <div class="head">
+            <div class="column left">
+                <h2>Connections</h2>
+                <div class="connections-panel">
+                    <div class="connection" v-for="user in game.users">
                         <div class="info">
                             <div class="thumbnail">
-                                <img class="portrait" v-bind:src="resolvePic(item.user.info.pic)" alt="Image">
+                                <img class="portrait" v-bind:src="resolvePic(user.info.pic)" alt="Image">
                             </div>
-                            <div class="name">
-                                <h3 class="title">{{item.postName.first}} {{item.postName.last}}</h3>
-                                <p>{{cat}}</p>
-                            </div>
-                            <div class="score">
-                                <h1>{{item.score}}</h1>
-                            </div>
+                            <p class="mediumGray">{{user.info.first}} {{user.info.last}}</p>
                         </div>
-                        <div class="content">
-                          <h1>{{item.headline}}</h1>
+                        <div class="feelings-container">
+                            <div class="feelings" v-bind:style="{ width: user.playerOpinion + '%' }"></div>
                         </div>
-                        <div class="buttons">
-                            <a class="like" v-bind:class="{liked: item.isLiked}" v-on:click="likePost(i)"><i class="fa fa-thumbs-up" aria-hidden="true"></i> Like</a>
-                            <a class="dislike" v-bind:class="{disliked: item.isDisliked}" v-on:click="dislikePost(i)"><i class="fa fa-thumbs-down" aria-hidden="true"></i> Dislike</a>
-                        </div>
-                    </div>
-                    <div class="commentSection">
-                        <transition-group name="comment-add" tag="div">
-                            <div class="comment commend-add-item" v-for="comment in item.comments"  v-bind:key="comment">
-                                <div class="thumbnail">
-                                    <img class="portrait" v-bind:src="resolvePic(comment.user.info.pic)" alt="Image">
-                                </div>
-                                <div class="content">
-                                    <h4>{{comment.commentName.first}} {{comment.commentName.last}}</h4>
-                                    <h3>{{comment.comment}}</h3>
-                                </div>
-                            </div>
-                        </transition-group>
-                    </div>
-                    <div class="userComment">
-                        <div class="thumbnail">
-                            <img class="portrait" src="http://bulma.io/images/placeholders/96x96.png" alt="Image">
-                        </div>
-                        <input type="text" placeholder="Comment..." v-on:click="pause = true" v-model="item.commentValue" v-on:keyup.enter="addComment(i)"></input>
-                    </div>
-                    <div class="submitComment" v-on:click="addComment(i)">
-                        <h5>Submit Comment</h5>
                     </div>
                 </div>
-            </transition-group>
-        </div>
-        <div class="column right">
-            <div class="trends-panel">
-                <h2>Trending Now:</h2>
-                <h6 v-for="item in game.topics">{{item}}</h6>
             </div>
+            <div class="column middle">
+                <div class="userInput">
+                    <div class="headline-submission">
+                        <img src="http://bulma.io/images/placeholders/96x96.png"/>
+                        <input type="text" placeholder="Post a headline" v-on:click="pause = true" v-model="user.headline" v-on:keyup.enter="submitHeadline"></input>
+                    </div>
+                    <div class="submitHeadline" v-on:click="submitHeadline">
+                        <h5>Add Headline</h5>
+                    </div>
+                </div>
+                <transition-group name="headline-add" tag="div">
+                    <div class="post headline-add-item" v-if="game.headlines" v-for="(item, i) in game.headlines" v-bind:key="item">
+                        <div class="head">
+                            <div class="info">
+                                <div class="thumbnail">
+                                    <img class="portrait" v-bind:src="resolvePic(item.user.info.pic)" alt="Image">
+                                </div>
+                                <div class="name">
+                                    <h3 class="title">{{item.postName.first}} {{item.postName.last}}</h3>
+                                    <p>{{cat}}</p>
+                                </div>
+                                <div class="score">
+                                    <h1>{{item.score}}</h1>
+                                </div>
+                            </div>
+                            <div class="content">
+                                <h1>{{item.headline}}</h1>
+                            </div>
+                            <div class="buttons">
+                                <a class="like" v-bind:class="{liked: item.isLiked}" v-on:click="likePost(i)"><i class="fa fa-thumbs-up" aria-hidden="true"></i> Like</a>
+                                <a class="dislike" v-bind:class="{disliked: item.isDisliked}" v-on:click="dislikePost(i)"><i class="fa fa-thumbs-down" aria-hidden="true"></i> Dislike</a>
+                            </div>
+                        </div>
+                        <div class="commentSection">
+                            <transition-group name="comment-add" tag="div">
+                                <div class="comment commend-add-item" v-for="comment in item.comments"  v-bind:key="comment">
+                                    <div class="thumbnail">
+                                        <img class="portrait" v-bind:src="resolvePic(comment.user.info.pic)" alt="Image">
+                                    </div>
+                                    <div class="content">
+                                        <h4>{{comment.commentName.first}} {{comment.commentName.last}}</h4>
+                                        <h3>{{comment.comment}}</h3>
+                                    </div>
+                                </div>
+                            </transition-group>
+                        </div>
+                        <div class="userComment">
+                            <div class="thumbnail">
+                                <img class="portrait" src="http://bulma.io/images/placeholders/96x96.png" alt="Image">
+                            </div>
+                            <input type="text" placeholder="Comment..." v-on:click="pause = true" v-model="item.commentValue" v-on:keyup.enter="addComment(i)"></input>
+                        </div>
+                        <div class="submitComment" v-on:click="addComment(i)">
+                            <h5>Submit Comment</h5>
+                        </div>
+                    </div>
+                </transition-group>
+            </div>
+            <div class="column right">
+                <div class="trends-panel">
+                    <h2>Trending Now:</h2>
+                    <h6 v-for="item in game.topics">{{item}}</h6>
+                </div>
+            </div>
+        </div>
+        <div class="stats" v-if="state.stats">
+
         </div>
     </div>
     <script src="app.js"></script>
