--- a/app/app.html
+++ b/app/app.html
@@ -14,7 +14,19 @@
 <body>
     <div id="app" class="headlinr">
         <div class="start" v-if="state.start">
-
+            <div class="start-screen">
+                <div class="welcome">
+                    <h1 class="darkPurple">Welcome to Headlinr</h1>
+                    <h3>Please fill out this quick form</h3>
+                </div>
+                <p>Email</p>
+                <input type="text"></input>
+                <p>First name</p>
+                <input type="text" v-model="user.info.first"></input>
+                <p>Last name</p>
+                <input type="text" v-model="user.info.last" v-on:keyup.enter="startGame"></input>
+                <h5 class="start-button" v-on:click="startGame">Sign-up!</h5>
+            </div>
         </div>
         <div class="game" v-if="state.game">
             <div class="headlinr-nav">
@@ -69,7 +81,7 @@
                         <h5>Add Headline</h5>
                     </div>
                 </div>
-                <transition-group name="headline-add" tag="div">
+                <transition-group name="headline-add">
                     <div class="post headline-add-item" v-if="game.headlines" v-for="(item, i) in game.headlines" v-bind:key="item">
                         <div class="head">
                             <div class="info">
