--- a/app/app.html
+++ b/app/app.html
@@ -17,22 +17,33 @@
             <div class="start-screen">
                 <div class="welcome">
                     <h1 class="darkPurple">Welcome to headlinr</h1>
-                    <h3>Everyone has an opinion.<br>Wouldn't you like to shares yours?<br>Sign up now:</h3>
+                    <h3>Everyone has an opinion.<br>Wouldn't you like to share yours?<br>Sign up now:</h3>
                 </div>
                 <p>Email</p>
-                <input type="text" placeholder="joeshmo@email.com"><div></div></input>
+                <input type="text" placeholder="joeshmo@email.com"></input>
                 <p>First name</p>
-                <input type="text" placeholder="Joe" v-model="user.info.first"><div></div></input>
+                <input type="text" placeholder="Joe" v-model="user.info.first"></input>
                 <p>Last name</p>
-                <input type="text" placeholder="Shmo" v-model="user.info.last" v-on:keyup.enter="startGame"><div></div></input>
-                <h5 class="start-button" v-on:click="startGame">Sign-up!</h5>
+                <input type="text" placeholder="Shmo" v-model="user.info.last" v-on:keyup.enter="startGame"></input>
+                <h5 class="purpleBtn fullWidth mgn-top-10" v-on:click="startGame">Sign-up!</h5>
+            </div>
+        </div>
+        <div class="stats" v-if="state.stats">
+            <div class="stats-welcome">
+                <h1 class="darkPurple mgn-btm-10">Congrats, you have beaten level {{currentRound}}</h1>
+                <h3 class="mgn-btm-10">You can move on to the next level, or view some stats about the last one!</h3>
+                <h5 class="greenBtn fullwidth mgn-right-10"><i class="fa fa-line-chart" aria-hidden="true"></i> View Stats</h5>
+                <h5 class="purpleBtn fullwidth mgn-left-10" v-on:click="moveState('game'); generateNewRound()"><i class="fa fa-play-circle" aria-hidden="true"></i> Next Level</h5>
             </div>
         </div>
         <div class="game" v-if="state.game">
             <div class="headlinr-nav">
                 <h1>headlinr</h1>
             </div>
-            <div class="headlinr-score-tracker">
+            <div class="headlinr-score-tracker" >
+                <div class="next-level-button" v-bind:class="{ inactive: !roundComplete }" v-on:click="moveState('stats')">
+                    <h5 class="greenBtn wiggle raised">Move on to the next level!&ensp;<i class="fa fa-arrow-right" aria-hidden="true"></i></h5>
+                </div>
                 <div class="likes-score">
                     <div class="tracker">
                         <div class="progress" v-bind:style="{width: (user.score.likes/user.score.likesReq) * 100 + '%'}"></div>
@@ -47,7 +58,7 @@
                     <h6 class="darkGray">{{user.score.comments}} of {{user.score.commentsReq}}</h6>
                     <h6>comments</h6>
                 </div>
-                <div class="users-core">
+                <div class="users-score">
                     <div class="tracker">
                         <div class="progress" v-bind:style="{width: (user.score.users/user.score.usersReq) * 100 + '%'}"></div>
                     </div>
@@ -77,9 +88,7 @@
                         <img src="http://bulma.io/images/placeholders/96x96.png"/>
                         <input type="text" placeholder="Post a headline" v-on:click="pause = true" v-model="user.headline" v-on:keyup.enter="submitHeadline"></input>
                     </div>
-                    <div class="submitHeadline" v-on:click="submitHeadline">
-                        <h5>Add Headline</h5>
-                    </div>
+                    <h5 class="purpleBtn fullWidth" v-on:click="submitHeadline">Add Headline</h5>
                 </div>
                 <transition-group name="headline-add">
                     <div class="post headline-add-item" v-if="game.headlines" v-for="(item, i) in game.headlines" v-bind:key="item">
@@ -90,10 +99,10 @@
                                 </div>
                                 <div class="name">
                                     <h3 class="title">{{item.postName.first}} {{item.postName.last}}</h3>
-                                    <p>{{cat}}</p>
+                                    <p>{{time}}</p>
                                 </div>
                                 <div class="score">
-                                    <h1>{{item.score}}</h1>
+                                    <h1 v-bind:class="{darkPurple: item.score >= 0, mediumPurple: item.score < 0}">{{item.score}}</h1>
                                 </div>
                             </div>
                             <div class="content">
@@ -135,9 +144,6 @@
                     <h6 v-for="item in game.topics">{{item}}</h6>
                 </div>
             </div>
-        </div>
-        <div class="stats" v-if="state.stats">
-
         </div>
     </div>
     <script src="app.js"></script>
