--- a/app/app.html
+++ b/app/app.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="app" class="headlinr">
-        <div class="headlinr-nav" v-if="state.game || state.stats">
+        <div class="headlinr-nav" v-if="!state.start">
             <h1 v-on:click="moveState('game')">headlinr</h1>
             <div class="spacer"></div>
             <div class="user-info" v-on:click="moveState('stats')">
@@ -50,7 +50,7 @@
                         <img src="./img/trends.png"/>
                         <h2>Trends</h2>
                         <p>{{upgradeSystem.trendsText}}</p>
-                        <h5 class="btn backPurple fullWidth" v-on:click="upgradeSystem.upgrade('trends')">Spend Points!</h5>
+                        <h5 class="btn backPurple fullWidth" v-on:click="upgradeSystem.upgrade('trends', game)">Spend Points!</h5>
                     </div>
                     <div class="power-up-container">
                         <img src="./img/dashboard.png"/>
@@ -66,9 +66,29 @@
                 <h1 v-on:click="upgrades = false">Done</h1>
             </div>
         </div>
+        <div class="dashboard" v-if="state.dashboard">
+            <h1>{{user.info.first}}'s Dashboard</h1>
+            <div class="graphs-container">
+                <div class="graphs-column">
+                    <h2>Post Frequency</h2>
+                    <div v-for="data in game.data" class="bar-container">
+                        <div class="bar" v-bind:style="{width: data.posts.length / 20 * 50 + '%'}"><p><b>{{data.posts.length}}</b></p></div>
+                        <p>{{data.trend}}</p>
+                    </div>
+                </div>
+                <div class="graphs-column">
+
+                </div>
+                <div class="graphs-column">
+
+                </div>
+            </div>
+        </div>
         <div class="stats" v-if="state.stats">
             <div class="column left">
-
+                <img src="http://bulma.io/images/placeholders/96x96.png" width="96px"/>
+                <h2>{{user.info.first}} {{user.info.last}}</h2>
+                <h5 class="btn backGreen fullWidth" v-on:click="moveState('dashboard')">View dashboard</h5>
             </div>
             <div class="column middle">
                 <div class="userInput">
